@@ -23,21 +23,71 @@
 
 /**
  * @test
- * @bug 8295803 8299689 8351435
+ * @bug 8295803 8299689 8351435 8361613
  * @summary Tests System.console() returns correct Console (or null) from the expected
  *          module.
- * @modules java.base/java.io:+open
- * @run main/othervm ModuleSelectionTest java.base
- * @run main/othervm -Djdk.console=jdk.internal.le ModuleSelectionTest jdk.internal.le
- * @run main/othervm -Djdk.console=java.base ModuleSelectionTest java.base
- * @run main/othervm --limit-modules java.base ModuleSelectionTest java.base
+ * @library /test/lib
+ * @build jdk.test.lib.Utils
+ *        jdk.test.lib.process.ProcessTools
+ * @run junit ModuleSelectionTest
  */
 
 import java.io.Console;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.stream.Stream;
+
+import jdk.test.lib.process.OutputAnalyzer;
+import jdk.test.lib.process.ProcessTools;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+
+import static jdk.test.lib.Utils.*;
 
 public class ModuleSelectionTest {
+    private static Stream<Arguments> options() {
+        return Stream.of(
+            Arguments.of("-Djdk.console=foo", "java.base"),
+            Arguments.of("-Djdk.console=java.base", "java.base"),
+            Arguments.of("-Djdk.console=jdk.internal.le", "jdk.internal.le"),
+            Arguments.of("--limit-modules java.base", "java.base")
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("options")
+    void testNonTTY(String opts) throws Exception {
+        opts = opts +
+            " --add-opens java.base/java.io=ALL-UNNAMED ModuleSelectionTest null";
+        OutputAnalyzer output = ProcessTools.executeTestJava(opts.split(" "));
+        output.reportDiagnosticSummary();
+        output.shouldHaveExitValue(0);
+    }
+
+    @ParameterizedTest
+    @MethodSource("options")
+    void testTTY(String opts, String expected) throws Exception {
+        // check "expect" command availability
+        var expect = Paths.get("/usr/bin/expect");
+        Assumptions.assumeTrue(Files.exists(expect) && Files.isExecutable(expect),
+            "'" + expect + "' not found. Test ignored.");
+
+        opts = "expect -n " + TEST_SRC + "/moduleSelection.exp " +
+            TEST_CLASSES + " " +
+            expected + " " +
+            TEST_JDK + "/bin/java" +
+            " --add-opens java.base/java.io=ALL-UNNAMED "
+            + opts;
+        // invoking "expect" command
+        OutputAnalyzer output = ProcessTools.executeProcess(opts.split(" "));
+        output.reportDiagnosticSummary();
+        output.shouldHaveExitValue(0);
+    }
+
     public static void main(String... args) throws Throwable {
         var con = System.console();
         var pc = Class.forName("java.io.ProxyingConsole");
@@ -49,10 +99,7 @@ public class ModuleSelectionTest {
                 .findGetter(pc, "delegate", jdkc)
                 .invoke(con) : null;
 
-        var expected = switch (args[0]) {
-            case "java.base" -> istty ? "java.base" : "null";
-            default -> args[0];
-        };
+        var expected = args[0];
         var actual = con == null ? "null" : impl.getClass().getModule().getName();
 
         if (!actual.equals(expected)) {
@@ -62,7 +109,7 @@ public class ModuleSelectionTest {
                 Actual: %s
                 """.formatted(expected, actual));
         } else {
-            System.out.printf("%s is the expected implementation. (tty: %s)\n", impl, istty);
+            System.out.printf("%s is the expected implementation. (tty: %s)\n", actual, istty);
         }
     }
 }
